Corrigindo bugs de desconexão inesperada entre cliente/servidor e vice versa, além de Threads daemon.