@@ -1,11 +1,10 @@
 package main;
 
+import cliente.*;
 import java.io.*;
 import java.net.Socket;
 import java.util.Scanner;
 import java.util.concurrent.atomic.AtomicBoolean;
-
-import cliente.*;
 
 // Fonte para o servidor e cliente: https://www.youtube.com/watch?v=gLfuZrrfKes
 public class Cliente {
@@ -33,8 +32,9 @@ public class Cliente {
     public void iniciaEscritor(){
         Escritor esct = new Escritor(this.socket, this.encodeMensagem,
                 this.bufferedWriter, this.active);
-        this.escritor = new Thread(esct);
-        this.escritor.start();
+        // this.escritor = new Thread(esct);
+        // this.escritor.start();
+        this.escritor = Thread.ofPlatform().daemon().start(esct);
     }
 
     public void mainLoop(){
@@ -50,7 +50,7 @@ public class Cliente {
                 this.bufferedReader.close();
                 this.bufferedWriter.close();
                 this.leitor.interrupt();
-                this.escritor.interrupt();
+                //this.escritor.interrupt();
             }
         }
         catch(IOException e){
